# excel_data_merger

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
data/output/: output.xlsx
src/: main.py
src/pipeline/: extract.py  load.py  transform.py
tests/: test_pipeline.py
