[project]
name = "excel-data-merger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "blue>=0.9.1",
    "isort>=6.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydocstyle>=6.3.0",
    "pytest>=8.3.5",
    "taskipy>=1.14.1",
]

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "uv run isort . && blue ."

