[project]
name = "excel-data-merger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "blue>=0.9.1",
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "mkdocstrings-python>=1.16.10",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydocstyle>=6.3.0",
    "pygments>=2.19.1",
    "pymdown-extensions>=10.14.3",
    "pytest>=8.3.5",
    "taskipy>=1.14.1",
]

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "uv run isort . && blue ."
test = "uv run pytest -v"
run = "uv run src/main.py"
kill = "kill-9 $(lsof -t -i :8000)"

